--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
   "packages": [
-    "packages/*",
-    "packages/common/*",
-    "packages/plugins/*"
+    "packages/*"
   ],
   "version": "2.0.0"
 }
