--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -37,7 +37,7 @@
     "copy:template-css": "cpx \"src/Builder/template/css/**/*.*\" \"out/Builder/template/css\" --verbose",
     "copy:template-image": "cpx \"src/Builder/template/image/**/*.*\" \"out/Builder/template/image\" --verbose",
     "copy:template-dirfiles": "cpx \"src/Builder/template/*.*\" \"out/Builder/template\" --verbose",
-    "copy:highlight.js-css": "cpx \"node_modules/highlight.js/styles/tomorrow.css\" \"out/Builder/template/css\" --verbose",
+    "copy:highlight.js-css": "cpx \"../../node_modules/highlight.js/styles/tomorrow.css\" \"out/Builder/template/css\" --verbose",
     "precoverage": "trash ./nyc_output && trash ./coverage",
     "coverage": "npm run coverage:build && nyc npm run test && npm run build",
     "coverage:build": "cross-env-shell NODE_ENV=coverage npm run build",
