--- a/packages/esdoc-core/package.json
+++ b/packages/esdoc-core/package.json
@@ -39,7 +39,8 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/traverse": "^7.12.5",
     "@enterthenamehere/color-logger": "file:../color-logger",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "readdirp": "^3.6.0"
   },
   "files": [
     "src",
