--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -20,8 +20,8 @@
     "cheerio": "^1.0.0-rc.5",
     "cpx2": "^3.0.0",
     "escape-string-regexp": "^4.0.0",
-    "highlight.js": "^11.2.0",
     "marked": "^2.0.1",
+    "prismjs": "^1.25.0",
     "sanitize-html": "^2.1.2",
     "taffydb": "^2.7.3",
     "trash-cli": "^4.0.0"
