--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -11,11 +11,16 @@ jobs:
       matrix:
         node-version: [12.x]
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: "Checkout"
+      uses: actions/checkout@v2
+
+    - name: "Use Node.js ${{ matrix.node-version }}"
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - name: "Install dependencies"
+      run: |
+        npm ci
+        npx lerna bootstrap
     - run: npm run test
