--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,6 +21,6 @@ jobs:
         cache: 'npm'
     - name: "Install dependencies"
       run: |
-        npm ci
+        npm i
         npx lerna bootstrap
     - run: npm run test
