--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [16.x]
     steps:
     - name: "Checkout"
       uses: actions/checkout@v2
@@ -22,8 +22,8 @@ jobs:
     
     - name: "Install dependencies"
       run: |
-        npm i -g lerna
+        npm ci
         npx lerna bootstrap
-
+    
     - name: "Run tests"
       run: npm run test
