--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@enterthenamehere/esdoc-unexported-identifier-plugin": "file:packages\\esdoc-unexported-identifier-plugin",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
     "babel-plugin-istanbul": "^6.0.0",
+    "chai": "^4.3.4",
     "cpx2": "^3.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.13.0",
@@ -43,8 +44,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "fs-extra": "^9.0.1",
-    "chai": "^4.3.4",
     "lerna": "^4.0.0",
+    "lerna-update-wizard": "^1.1.2",
     "mocha": "^9.2.0",
     "nyc": "^15.1.0",
     "trash-cli": "^4.0.0"
