--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -19,6 +19,7 @@
     "@enterthenamehere/ice-cap": "file:../ice-cap",
     "cheerio": "^1.0.0-rc.10",
     "cpx2": "^3.0.0",
+    "ejs": "^3.1.8",
     "escape-string-regexp": "^4.0.0",
     "marked": "^4.0.10",
     "prismjs": "^1.27.0",
