--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -17,7 +17,7 @@
     "@babel/generator": "^7.12.5",
     "@enterthenamehere/esdoc-core": "file:../esdoc-core",
     "@enterthenamehere/ice-cap": "file:../ice-cap",
-    "cheerio": "^1.0.0-rc.10",
+    "cheerio": "1.0.0-rc.10",
     "cpx2": "^3.0.0",
     "escape-string-regexp": "^4.0.0",
     "marked": "^4.0.10",
