--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.8",
     "escape-string-regexp": "^4.0.0",
     "marked": "^4.0.10",
+    "peggy": "^2.0.1",
     "prismjs": "^1.27.0",
     "sanitize-html": "^2.1.2",
     "taffydb": "^2.7.3",
