--- a/packages/esdoc-flow-type-plugin/package.json
+++ b/packages/esdoc-flow-type-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enterthenamehere/esdoc-flow-type-plugin",
-  "version": "2.5.0",
+  "version": "2.5.3-dev.0",
   "description": "A flow type plugin for ESDoc [PoC]",
   "author": "h13i32maru",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/esdoc-flow-type-plugin",
