--- a/packages/esdoc/package.json
+++ b/packages/esdoc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enterthenamehere/esdoc",
-  "version": "2.5.0",
+  "version": "2.5.3-dev.0",
   "description": "Good Documentation Generator For JavaScript, updated for new decade",
   "author": {
     "name": "h13i32maru",
